--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="eProjectTest.css">
+    <link rel="stylesheet" href="faq.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -13,6 +14,7 @@
 </head>
 </head>
 <body ng-app="myApp" ng-controller="myCtrl">
+
     <nav class="navbar navbar-expand-sm ">
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -41,6 +43,9 @@
             </li>
           </ul>
     </nav>
+    
+
+    <div ng-view></div>
     <div class='lentop'>
       <div>
       <img src='top.png'/>
