--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="eProjectTest.css">
     <link rel="stylesheet" href="faq.css">
+    <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -38,7 +39,7 @@
             </li>
             <li class="nav-item">
               <div class="r">
-              <a class="nav-link" href="#!Faq">CONTACT US</a>
+              <a class="nav-link" href="#!Ctu">CONTACT US</a>
               </div>
             </li>
           </ul>
@@ -70,14 +71,15 @@
                     .when("/Faq", {
                         templateUrl: "faq.html",
                     })
-                    .when("/About", {
-                        templateUrl: "about.html"
+                    .when("/Ctu", {
+                        templateUrl: "contact.html"
                     });
                   });
 
                 </script>
                 <script src="up.js"></script>
                 <script src="label.js"></script>
+                <script src="contact.js"></script>
                 
             
 </body>
