--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </li>
           <li>
             <div class="bubbles">
-            <h1 class="h"><a href="eProjectTest.html">Conversion</a></h1>
+            <h1 class="h"><a href="index.html">Conversion</a></h1>
             </div>
           </li>
           <li class="nav-item">
