--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
       </li>
       <li>
         <div class="bubbles">
-        <h1 class="h"><a href="eProjectTest.html">Conversion</a></h1>
+        <h1 class="h"><a href="index.html">Conversion</a></h1>
         </div>
       </li>
       <li class="nav-item">
