--- a/contact.html
+++ b/contact.html
@@ -18,45 +18,46 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-sm ">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <div class="l">
-        <a class="nav-link" href="faq.html">FAQ</a>
-        </div>
-      </li>
-      <li>
-        <div class="bubbles">
-        <h1 class="h"><a href="index.html">Conversion</a></h1>
-        </div>
-      </li>
-      <li class="nav-item">
-        <div class="r2">
-          <div class="dropdown">
-            <button onclick="hamDropdown()" class="nut_dropdown">List conversion <i style="font-size:24px" class="fa">&#xf0dd;</i></button>
-            <div class="noidung_dropdown">
-              <a href="length.html">Length</a>
-              <a href="#">Area</a>
-              <a href="volume.html">Volume</a>
-              <a href="#">Mass</a>
-              <a href="#">Temperature</a>
-              <a href="#">Currency</a>
+    <nav class="navbar navbar-expand-sm ">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <div class="l">
+            <a class="nav-link" href="faq.html">FAQ</a>
             </div>
-          </div> 
-        </div>
-      </li>
-      <li class="nav-item">
-        <div class="r1">
-          <button class="r1" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
-        </div>
-      </li>
-        <li class="nav-item">
-          <div class="r">
-          <a class="nav-link" href="contact.html">CONTACT US</a>
-          </div>
-        </li>
-      </ul>
-</nav>
+          </li>
+          <li>
+            <div class="bubbles">
+            <h1 class="h"><a href="index.html">Conversion</a></h1>
+            </div>
+          </li>
+          <li class="nav-item">
+            <div class="r2">
+              <div class="dropdown">
+                <button onclick="hamDropdown()" class="nut_dropdown">List conversion <i style="font-size:24px" class="fa">&#xf0dd;</i></button>
+                <div class="noidung_dropdown">
+                  <a href="length.html">Length</a>
+                  <a href="area.html">Area</a>
+                  <a href="volume.html">Volume</a>
+                  <a href="mass.html">Mass</a>
+                  <a href="temperature.html">Temperature</a>
+                  <a href="currency.html">Currency</a>
+                </div>
+              </div> 
+            </div>
+          </li>
+          <li class="nav-item">
+            <div class="r1">
+              <button class="r1" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
+            </div>
+          </li>
+            <li class="nav-item">
+              <div class="r">
+              <a class="nav-link" href="contact.html">CONTACT US</a>
+              </div>
+            </li>
+          </ul>
+    </nav>
+
 
 <br> <br> 
 
