--- a/faq.html
+++ b/faq.html
@@ -32,60 +32,25 @@
         </div>
       </li>
       <li class="nav-item">
-        <div class="r2">
+        <div class="r">
           <div class="dropdown">
             <button onclick="hamDropdown()" class="nut_dropdown">List conversion <i style="font-size:24px" class="fa">&#xf0dd;</i></button>
             <div class="noidung_dropdown">
               <a href="length.html">Length</a>
-              <a href="#">Area</a>
+              <a href="area.html">Area</a>
               <a href="volume.html">Volume</a>
-              <a href="#">Mass</a>
-              <a href="#">Temperature</a>
-              <a href="#">Currency</a>
+              <a href="mass.html">Mass</a>
+              <a href="temperature.html">Temperature</a>
+              <a href="currency.html">Currency</a>
             </div>
           </div> 
         </div>
       </li>
-      <li class="nav-item">
-        <div class="r1">
-          <button class="r1" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
-        </div>
-      </li>
-        <li class="nav-item">
-          <div class="r">
-          <a class="nav-link" href="contact.html">CONTACT US</a>
-          </div>
-        </li>
       </ul>
 </nav>
   <br> <br> <br> <br> <br>
 
-  <div id="id01" class="modal">
   
-    <form class="modal-content animate" action="" method="post" onsubmit="return validate()">
-      <div class="imgcontainer">
-        <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-      </div>
-  
-      <div class="container">
-        <label for="uname"><b>Username</b></label>
-        <input type="text" class="login" placeholder="Enter Username" name="uname" id="username" required>
-  
-        <label for="psw"><b>Password</b></label>
-        <input type="password" class="login" placeholder="Enter Password" name="psw" id="password" required>
-          
-        <button type="submit">Login</button>
-        <label>
-          <input type="checkbox" checked="checked" name="remember"> Remember me
-        </label>
-  
-    </div>
-     <div class="container" style="background-color:#f1f1f1">
-       <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-       <span class="psw">Forgot <a href="#">password?</a></span>
-     </div>
-   </form>
- </div>
     
     <div class="container">
       <ul>
