--- a/index.html
+++ b/index.html
@@ -32,8 +32,14 @@
             <h1 class="h"><a href="index.html">Conversion</a></h1>
             </div>
           </li>
+        </li>
+        <li class="nav-item">
+          <div class="r">
+          <a class="nav-link" href="contact.html">CONTACT US</a>
+          </div>
+        </li>
           <li class="nav-item">
-            <div class="r">
+            <div class="r2">
               <div class="dropdown">
                 <button onclick="hamDropdown()" class="nut_dropdown">List conversion <i style="font-size:24px" class="fa">&#xf0dd;</i></button>
                 <div class="noidung_dropdown">
