--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
       <div class="fish" id="fish"></div>
      <div class="fish" id="fish2"></div>
      
-     <form action="/action_page.php" id="waterform" method="POST" onsubmit="submit1()">
+     <form action="action.html" id="waterform" method="GET" target="_blank">
      
      <div class="formgroup" id="name-form">
         <label for="name">Your name*</label>
