--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="CSS/eProjectTest.css">
     <link rel="stylesheet" href="CSS/login.css">
     <link rel="stylesheet" href="CSS/listcvs.css">
+    <link rel="stylesheet" href="CSS/mobile.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -79,22 +80,22 @@
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/length.jpg" alt="Lenght" width="200" height="100">
+      <img src="img/length.jpg" alt="Lenght" >
     </div>
     <div class="carousel-item">
-      <img src="img/mass.png" alt="Mass" width="200" height="100">
+      <img src="img/mass.png" alt="Mass">
     </div>
     <div class="carousel-item">
-      <img src="img/area.jpg" alt="Area" width="100" height="100">
+      <img src="img/area.jpg" alt="Area" >
     </div>
     <div class="carousel-item">
-      <img src="img/Temperature.png" alt="Temperature" width="100" height="100">
+      <img src="img/Temperature.png" alt="Temperature">
     </div>
     <div class="carousel-item">
-      <img src="img/Volume.png" alt="Volume" width="100" height="100">
+      <img src="img/Volume.png" alt="Volume" >
     </div>
     <div class="carousel-item">
-      <img src="img/Currency.jpg" alt="Currency" width="100" height="100">
+      <img src="img/Currency.jpg" alt="Currency" >
     </div>
   </div>
   
