--- a/length.html
+++ b/length.html
@@ -65,7 +65,7 @@
 <h1 class="fontCon">Length</h1>
 <div class="cvstb"> 
 <div>
-  <div class="conv__container conv__form">
+  <div class="conv__container">
     <div class="conv conv__length">
       <select id="currency-one">
         <option value="KM" selected>KM(kilomet)</option>
