--- a/mass.html
+++ b/mass.html
@@ -63,71 +63,46 @@
 <h1 class="fontCon">Mass</h1>
 <div class="cvstb"> 
 <div>
-  select:<select ng-model="mySelect" class="fl4">
-   <option value="q1">Ounces</option>
-   <option value="q2">Pounds</option>
-   <option value="q3">Short tons (2000 lb)</option>
- </select>
- <div ng-switch="mySelect">
- <div ng-switch-when="q1">
-  <p class="fl1">
-      <label>oz:</label>
-      <input id="inputFeet" type="number" placeholder="Ounces" oninput="LengthConverterO(this.value)" onchange="LengthConverter(this.value)">
-    </p>
-    <div class="fl2">
-       select:&nbsp;&nbsp;<select ng-model="mySelect" class="fl4">
-        <option value="q1">Grams</option>
+  <div class="conv__container conv__form">
+    <div class="conv conv__length">
+      <select id="currency-one">
+        <option value="CARA" selected>Cara</option>
+        <option value="CG">CG(centigram)</option>
+        <option value="DAG">DAG(decagam)</option>
+        <option value="G">G(Gam)</option>
+        <option value="HG">HG(hectogam)</option>
+        <option value="KG">KG(kilogam)</option>
+        <option value="LB">LB(pound)</option>
+        <option value="MG">MG(</option>
+        <option value="OZ">OZ(ounce)</option>
+        <option value="TA">Tạ</option>
+        <option value="TAN">Tấn</option>
       </select>
-      <div ng-switch="mySelect" class="fl3">
-      <div ng-switch-when="q1"><p>g: <input type="number" id="outputg" disabled></p></div>
-      </div>
+      <input type="number" id="amount-one" placeholder="0" value="1" />
     </div>
-    <div hidden>
-     <p>g: <span id="outputg"></span></p>
-    </div>
- </p></div>
- <div ng-switch-when="q2"><p>
-    
-  <p class="fl1">
-    <label>lb:</label>
-    <input id="inputFeet" type="number" placeholder="Pounds" oninput="LengthConverterP(this.value)" onchange="LengthConverter(this.value)">
-  </p>
-  <div class="fl2a1">
-    &nbsp;&nbsp;select:<select ng-model="mySelect" class="fl4">
-      <option value="q2">Kilograms</option>
-    </select>
-    <div ng-switch="mySelect" class="fl3">
-    <div ng-switch-when="q2"><p>Kg: <input  type="number" id="outputkg" disabled></p></div>
-    </div>
-  </div>
-  <div hidden>
-    <p>Kg: <span id="outputkg"></span></p>
-  </div>
 
- 
+    <div class="swap-rate-container">
+      <button class="btn" id="swap">Swap</button>
+      <div class="rate" id="rate"></div>
+    </div>
 
- </p></div>
- <div ng-switch-when="q3"><p>
-  <p class="fl1">
-    <label>T:</label>
-    <input id="inputFeet" type="number" placeholder="short tons (2000 lb)" oninput="LengthConverterSt(this.value)" onchange="LengthConverter(this.value)">
-  </p>
-  <div class="fl2a1">
-    &nbsp;&nbsp;select:<select ng-model="mySelect" class="fl4">
-      <option value="q3">mega grams (or "metric ton")</option>
-    </select>
-    <div ng-switch="mySelect" class="fl3">
-    <div ng-switch-when="q3"><p>Mg: <input type="number" id="outputMg" disabled></p></div>
+    <div class="conv conv__length">
+      <select id="currency-two">
+        <option value="CARA" >Cara</option>
+        <option value="CG">CG(centigram)</option>
+        <option value="DAG">DAG(decagam)</option>
+        <option value="G">G(Gam)</option>
+        <option value="HG">HG(hectogam)</option>
+        <option value="KG"selected>KG(kilogam)</option>
+        <option value="LB">LB(pound)</option>
+        <option value="MG">MG(</option>
+        <option value="OZ">OZ(ounce)</option>
+        <option value="TA">Tạ</option>
+        <option value="TAN">Tấn</option>
+      </select>
+      <input type="number" id="amount-two" placeholder="0" />
     </div>
   </div>
-  <div hidden>
-    <p>Meter: <span id="outputMg"></span></p>
-  </div>
-  
-
- </p></div>
- 
-</div>
 </div>
 </div>
 
