--- a/temperature.html
+++ b/temperature.html
@@ -65,49 +65,30 @@
 <h1 class="fontCon">Temperature</h1>
 <div class="cvstb"> 
 <div>
-  select:<select ng-model="mySelect" class="fl4">
-   <option value="q1">Fahrenheit</option>
-   <option value="q2">Celsius</option>
- </select>
- <div ng-switch="mySelect">
- <div ng-switch-when="q1">
-  <p class="fl1">
-      <label><sup>o</sup>F:</label>
-      <input id="inputFeet" type="number" placeholder="Fahrenheit" oninput="LengthConverterF(this.value)" onchange="LengthConverter(this.value)">
-    </p>
-    <div class="fl2">
-       select:&nbsp;&nbsp;<select ng-model="mySelect" class="fl4">
-        <option value="q1">Celsius</option>
+  <div class="conv__container conv__form">
+    <div class="conv conv__length">
+      <select id="currency-one">
+        <option value="K">K(Kelvin)</option>
+        <option value="C" selected>C(độ C)</option>
+        <option value="F">F(Fahrenheit)</option>
       </select>
-      <div ng-switch="mySelect" class="fl3">
-      <div ng-switch-when="q1"><p><sup>o</sup>C: <input type="number" id="outputF" disabled></p></div>
-      </div>
+      <input type="number" id="amount-one" placeholder="0" value="1" />
     </div>
-    <div hidden>
-     <p>Celsius: <span id="outputMeters"></span></p>
+
+    <div class="swap-rate-container">
+      <button class="btn" id="swap">Swap</button>
+      <div class="rate" id="rate"></div>
     </div>
- </p></div>
- <div ng-switch-when="q2"><p>
-    
-  <p class="fl1">
-    <label><sup>o</sup>C:</label>
-    <input id="inputFeet" type="number" placeholder="Celsius" oninput="LengthConverterC(this.value)" onchange="LengthConverter(this.value)">
-  </p>
-  <div class="fl2a1">
-    &nbsp;&nbsp;select:<select ng-model="mySelect" class="fl4">
-      <option value="q2">Fahrenheit</option>
-    </select>
-    <div ng-switch="mySelect" class="fl3">
-    <div ng-switch-when="q2"><p><sup>o</sup>F: <input  type="number" id="outputC" disabled></p></div>
+
+    <div class="conv conv__length">
+      <select id="currency-two">
+        <option value="K">K(Kelvin)</option>
+        <option value="C">C(độ C)</option>
+        <option value="F" selected>F(Fahrenheit)</option>
+      </select>
+      <input type="number" id="amount-two" placeholder="0" />
     </div>
   </div>
-  <div hidden>
-    <p>Celsius: <span id="outputMillimetre"></span></p>
-  </div>
- </p></div>
- 
- 
-</div>
 </div>
 </div>
 
