--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                   <a href="mass.html">Mass</a>
                   <a href="temperature.html">Temperature</a>
                   <a href="currency.html">Currency</a>
+                  <a href="Pressure.html">Pressure</a>
                 </div>
               </div> 
             </div>
