--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                   <a href="temperature.html">Temperature</a>
                   <a href="currency.html">Currency</a>
                   <a href="Pressure.html">Pressure</a>
+                  <a href="energy.html">Energy</a>
+                  <a href="power.html">Power</a>
+                  <a href="time.html">Time</a>
+                  <a href="velocity.html">Velocity</a>
                 </div>
               </div> 
             </div>
